--- a/app/views/login/login.html
+++ b/app/views/login/login.html
@@ -1,7 +1,7 @@
 <div class="login-container">
   <h1>Login</h1>
   <div class="login-card-container">
-    <input ng-model="vm.loign" type="email" placeholder="Email" />
+    <input ng-model="vm.email" type="email" placeholder="Email" />
     <input ng-model="vm.password" type="password" placeholder="Senha" />
     <button ng-click="vm.login()">Entrar</button>
     <p class="register-link">
